--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,12 @@
 ---
 title: "."
 comments: false
+listing:
+  contents: posts
+  sort: "date desc"
+  type: default
+  categories: true
+  feed: true
 ---
 
 This is a Quarto website.
