--- a/posts/_template.qmd
+++ b/posts/_template.qmd
@@ -4,9 +4,24 @@ description: "A template for creating new posts"
 # comments: false
 editor: source
 date: 2024-11-17T09:07:08Z
+date-format: "MMMM Do, YYYY"
 date-modified: "`r Sys.Date()`"
 draft: true
 categories:
   - packages
   - r
+title-block-banner: false # this can also be a hex color or an image
+title-block-banner-color: "#000"
 ---
+
+::: {.grid}
+
+::: {.g-col-4}
+This column takes 1/3 of the page
+:::
+
+::: {.g-col-8}
+This column takes 2/3 of the page
+:::
+
+:::
