--- a/posts/_index_series_template.qmd
+++ b/posts/_index_series_template.qmd
@@ -7,7 +7,7 @@ listing:
     - "!index.qmd"
   sort: "date desc"
   type: default
-  categories: false
+  categories: true
   sort-ui: false
   filter-ui: false
   fields: [date, title, reading-time, description]
