--- a/posts/first_release.qmd
+++ b/posts/first_release.qmd
@@ -2,6 +2,7 @@
 title: "{ordinalsimr} First Release"
 description: "Final checks and the process of submitting to CRAN"
 date: 2024-11-17T20:05:00Z
+year: 2024
 categories:
   - packages
   - R
