--- a/posts/development.qmd
+++ b/posts/development.qmd
@@ -2,6 +2,7 @@
 title: "ordinalsimr"
 description: "Simulations of Ordinal Endpoints: A Shiny App"
 date: 2024-11-17T20:10:00Z
+year: 2024
 categories:
   - packages
   - R
