--- a/posts/example2025.qmd
+++ b/posts/example2025.qmd
@@ -1,12 +1,11 @@
 ---
-title: "_template"
+title: "Hello"
 description: "A template for creating new posts"
 # comments: false
-editor: source
-date: 2025-01-01
+date: 2025-08-03
 year: 2025
 date-modified: last-modified
-draft: true
+draft: false
 categories:
   - packages
   - R
@@ -14,14 +13,4 @@ title-block-banner: false # this can also be a hex color or an image
 title-block-banner-color: "#000"
 ---
 
-::: {.grid}
-
-::: {.g-col-4}
-This column takes 1/3 of the page
-:::
-
-::: {.g-col-8}
-This column takes 2/3 of the page
-:::
-
-:::
+(This page is currently a placeholder)
