--- a/posts.qmd
+++ b/posts.qmd
@@ -22,6 +22,14 @@ listing:
       year: 2024
     sort: "date desc"
     type: default
+  
+format:
+  html:
+    grid:
+      sidebar-width: 300px
+      body-width: 700px
+      margin-width: 300px
+      gutter-width: 1.5rem
 ---
 
 
