--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,7 @@ format:
       body-width: 1050px
       margin-width: 200px
       gutter-width: 2em
+    css: css/reset-padding.css
 about:
     template: trestles
     id: above-content
